--- a/Proiect/Proiect.vcxproj.filters
+++ b/Proiect/Proiect.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="TextureManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="textureException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
