--- a/Proiect/Proiect.vcxproj.filters
+++ b/Proiect/Proiect.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="HPBar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AttackFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HPBar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AttackFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
